--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config./.prettierrc",
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest --collectCoverage"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
@@ -24,6 +25,8 @@
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.2.1",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "@types/redux-persist": "^4.3.1",
@@ -34,8 +37,16 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "jest": "^29.7.0",
     "prettier": "^3.2.4",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "vite": "^5.0.8"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "dist\\index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
